# yt-to-blog

./: .gitignore  CLAUDE.md  README.md  prompt.md  pyproject.toml
src/: prompt.py  yt_to_blog.py
src/yt_to_blog/: __init__.py  prompt.md
